--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -698,6 +698,12 @@ iframe {
   margin: 0 auto;
   padding: 0px;
   margin-top: 0px; }
+  @media only screen and (min-width: 630px) and (max-width: 959px) {
+    .planning {
+      width: 630px; } }
+  @media only screen and (max-width: 629px) {
+    .planning {
+      width: 320px; } }
 
 .planningh {
   font-size: 2.0em;
