--- a/sass/layouts.scss
+++ b/sass/layouts.scss
@@ -1,11 +1,10 @@
-//--------------- CONTACT PAGE --------------//
+//------------------------- CONTACT PAGE ------------------------//
 
 .blocks--contact{
-/*	//border: 1px solid red;
-*/	margin-top: 223px;
-}
+/*	margin-top: 223px;
+*/}
 
-//--------------- CONTACT PAGE --------------//
+//------------------------- CONTACT PAGE ------------------------//
 
 
 
@@ -30,6 +29,9 @@
 }
 
 //--------------- INDEX PAGE --------------//
+
+
+
 
 
 //--------------- ABOUT PAGE --------------//
@@ -131,13 +133,6 @@
 				@extend %radius;
 			}
 
-			/*&__title{
-				text-align: center;
-				margin-top:7px;
-				font-size: 1.0em;
-				font-weight: $font-weight-bold;
-			}*/
-
 			@include bp(medium) {
 				width: 630px;
 				height: 269px;
@@ -146,7 +141,6 @@
 			@include bp(small) {
 			height: 137px;
 			width: 320px;
-			margin-top: 40px;
 			}
 		}
 
@@ -178,7 +172,7 @@
 			@include bp(small) {
 			height: 176px;
 			width: 320px;
-			margin-top: 40px;
+			margin-top: -20px;
 			}
 		}
 	}
