--- a/sass/layouts.scss
+++ b/sass/layouts.scss
@@ -1,8 +1,8 @@
 //------------------------- CONTACT PAGE ------------------------//
 
 .blocks--contact{
-/*	margin-top: 223px;
-*/}
+	margin-top: 223px;
+}
 
 //------------------------- CONTACT PAGE ------------------------//
 
@@ -16,7 +16,7 @@
 	width: 100%;
 	padding-top:75px;
 	background-color: $color-background;
-	padding-bottom:60px;
+	padding-bottom:20px;
 	margin-top: 223px;
 
 	@include bp(medium) {
@@ -53,7 +53,7 @@
 
 .blocks{
 	width: 100%;
-	padding-bottom:15px;
+	
 	border-bottom: 1px solid white;
 	border-top: 1px solid $color-background;
 	margin-top: 0px;
@@ -61,6 +61,8 @@
 	padding-top: 0px;
   	padding: 0px !important;
   	z-index: 99 !important;
+  	padding-bottom:20px !important;
+
 
 	&__row{
 		width: 960px;
@@ -105,7 +107,7 @@
 			@extend .blocks__row__one;
 
 			@include bp(small) {
-				margin-top: 40px;
+				margin-top: 50px;
 			}
 		}
 
@@ -118,7 +120,7 @@
 			}
 
 			@include bp(small) {
-				margin-top: 40px;
+				margin-top: 50px;
 			}
 		}
 
