--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -292,7 +292,7 @@ p.p_white {
 .description {
   background-color: white;
   padding-top: 0px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
   margin-top: 0px;
   border: 1px solid white; }
   .description__container, .description__container--contact, .results__container {
@@ -318,6 +318,9 @@ p.p_white {
     .description__container--contact {
       margin-top: 60px; }
 
+@media only screen and (max-width: 629px) {
+  .results__container {
+    margin-bottom: 30px; } }
 .results__container--button {
   text-align: center;
   margin-bottom: 30px; }
@@ -385,7 +388,7 @@ footer {
     .footer__wrapper {
       width: 320px;
       padding-top: 50px;
-      padding-bottom: 100px; } }
+      padding-bottom: 0px; } }
 
 .copyright {
   text-align: left;
@@ -436,14 +439,13 @@ footer {
   float: left; }
 
 .blocks--contact {
-  /*	margin-top: 223px;
-  */ }
+  margin-top: 223px; }
 
 .blocks--index, .blocks--about {
   width: 100%;
   padding-top: 75px;
   background-color: #f7f7f6;
-  padding-bottom: 60px;
+  padding-bottom: 20px;
   margin-top: 223px; }
   @media only screen and (min-width: 630px) and (max-width: 959px) {
     .blocks--index, .blocks--about {
@@ -460,14 +462,14 @@ footer {
 
 .blocks {
   width: 100%;
-  padding-bottom: 15px;
   border-bottom: 1px solid white;
   border-top: 1px solid #f7f7f6;
   margin-top: 0px;
   background-color: #f7f7f6;
   padding-top: 0px;
   padding: 0px !important;
-  z-index: 99 !important; }
+  z-index: 99 !important;
+  padding-bottom: 20px !important; }
   .blocks__row {
     width: 960px;
     margin: 0 auto;
@@ -497,7 +499,7 @@ footer {
           width: 320px; } }
     @media only screen and (max-width: 629px) {
       .blocks__row__two {
-        margin-top: 40px; } }
+        margin-top: 50px; } }
     .blocks__row__three {
       margin-right: 0px; }
       @media only screen and (min-width: 630px) and (max-width: 959px) {
@@ -505,7 +507,7 @@ footer {
           margin-right: 0px; } }
       @media only screen and (max-width: 629px) {
         .blocks__row__three {
-          margin-top: 40px; } }
+          margin-top: 50px; } }
     .blocks__row__large {
       height: 409px;
       width: 960px;
