--- a/stylesheets/components.css
+++ b/stylesheets/components.css
@@ -54,14 +54,15 @@ sass/components.scss:5
 /Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 /Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/plugin/compiler.rb:209:in `each'
 /Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/plugin/compiler.rb:471:in `on_file_changed'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/plugin/compiler.rb:293:in `watch'
+/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/plugin.rb:109:in `method_missing'
+/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/exec/sass_scss.rb:383:in `watch_or_update'
+/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/exec/base.rb:52:in `parse'
+/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/lib/sass/exec/base.rb:19:in `parse!'
+/Users/andrea/.rvm/gems/ruby-2.2.1/gems/sass-3.4.21/bin/sass:13:in `<top (required)>'
+/Users/andrea/.rvm/gems/ruby-2.2.1/bin/sass:23:in `load'
+/Users/andrea/.rvm/gems/ruby-2.2.1/bin/sass:23:in `<main>'
 */
 body:before {
   white-space: pre;
